@@ -105,19 +105,14 @@ variable "resource_platform" {
 }
 
 variable "ssh_authorized_keys" {
-  #! Deprecation notice: Please use `ssh_public_key` or `ssh_public_key_path` instead
-  description = "DEPRECATED: use ssh_public_key or ssh_public_key_path instead. Public SSH keys path to be included in the ~/.ssh/authorized_keys file for the default user on the instance."
+  #! Deprecation notice: Please use `ssh_public_keys` instead
+  description = "DEPRECATED: use ssh_public_keys instead. Public SSH keys path to be included in the ~/.ssh/authorized_keys file for the default user on the instance."
   type        = string
   default     = null
 }
 
-variable "ssh_public_key" {
-  description = "The content of the ssh public key used to access the compute instance. Set this, or ssh_public_key_path to add multiple keys at once."
-  type        = string
-  default     = null
-}
-variable "ssh_public_key_path" {
-  description = "Path to file containing one or more ssh public keys used to access the compute instance. One key per line. Set this or the ssh_public_key."
+variable "ssh_public_keys" {
+  description = "Public SSH keys to be included in the ~/.ssh/authorized_keys file for the default user on the instance. To provide multiple keys, see docs/instance_ssh_keys.adoc."
   type        = string
   default     = null
 }
